Home Work 3 с правками 2

--- a/home_work/home_work_3/css/style.css
+++ b/home_work/home_work_3/css/style.css
@@ -54,6 +54,7 @@ body {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    margin-bottom: 17px;
 }
 
 .main-content-left-sub-header {
@@ -63,7 +64,6 @@ body {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin-top: 17px;
     margin-bottom: 37px;
 }
 
