--- a/home_work/home_work_5/css/style.css
+++ b/home_work/home_work_5/css/style.css
@@ -227,6 +227,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 54px;
 }
 
 .services-header {
@@ -248,7 +249,6 @@ body {
     font-weight: 400;
     line-height: 150%;
     /* 24px */
-    margin-bottom: 54px;
 }
 
 .services-items {
@@ -260,6 +260,8 @@ body {
 
 .services-items-item {
 display: flex;
+flex-direction: column;
+align-items: center;
 }
 
 .services-info {
