--- a/home_work/home_work_9/css/style.css
+++ b/home_work/home_work_9/css/style.css
@@ -211,38 +211,97 @@ a {
     border: 1px solid #FF6A6A;
 }
 
+.featured_button:hover {
+    color: white;
+    background-color: #F16D7F;
+}
+
 .featured_section {
     padding-bottom: 95px;
+}
+
+/* hover */
+
+.featured_hover {
+    list-style: none;
+    width: 100%;
+    text-align: center;
+}
+
+.featured_hover li {
+    position: relative;
+    display: inline-block;
+    background-color: #fff;
+    overflow: hidden;
+}
+
+.featured_hover li a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    gap: 10px;
+    color: #fff;
+    background: rgba(58, 56, 56, 0.86);
+    margin: 0 auto;
+    border-style: inset;
+}
+
+.featured_hover li a:hover {
+    background: #454545;
+    color: #fff;
+}
+
+
+.featured_hover li>div {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.featured_hover li:hover>div {
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+}
+
+.featured_hover li div {
+    opacity: 0;
+    background-color: rgba(58, 56, 56, 0.86);
+    transition: all 0.4s ease-in-out;
+}
+
+.featured_hover li:hover div {
+    opacity: 1;
 }
 
 /* ---footer---info--- */
 
 .footer_info {
     background-color: #222224;
-    width: 100%;
+    height: 341px;
     display: flex;
-    gap: 30px;
-    padding: 104px 230px;
     justify-content: center;
+    gap: 30px;
 }
 
 .footer_info_item {
+    margin-top: 103px;
+    width: 360px;
+    align-items: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
 }
 
-.footer_info_icon_first {
-    margin-bottom: 28px;
-}
-
-.footer_info_icon_second {
-    margin-bottom: 19px;
-}
-
-.footer_info_icon_third {
-    margin-bottom: 25px;
+.footer_info_icon {
+    width: 44.989px;
+    height: 31.935px;
+    flex-shrink: 0;
+    margin-bottom: 28.07px;
 }
 
 .footer_info_item_h2 {
@@ -261,55 +320,44 @@ a {
     font-family: "Lato";
     font-size: 13.972px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 300;
     line-height: normal;
-    width: 360px;
 }
-
 
 /* ---footer---center--- */
 
 .footer_center {
-    background-image: url(../img/footer/center/beach.png);
-    background-color: rgba(244, 244, 244, 0.70);
-    background-blend-mode: overlay;
-    /* background-size: cover; */
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-around;
-    align-items: center;
-    padding-top: 97px;
-    padding-bottom: 126px;
-    width: 60%;
+    background-image: url(../img/footer/center/b.webp);
+    height: 448px;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-.footer_center_left_img {
-    margin-bottom: 30px;
-    width: 96px;
-height: 96px;
-opacity: 1;
+.footer_center_background {
+    background: rgba(244, 244, 244, 0.70);
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 220px;
 }
 
 .footer_center_left {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    max-width: 30%;
-
 }
 
-.footer_center_right {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
+.footer_center_left_img {
+    width: 96px;
+    height: 96px;
+    flex-shrink: 0;
+    margin-bottom: 30px;
 }
 
 .footer_center_left_text {
-    width: 360px;
-    height: 61px;
     color: #222224;
     text-align: center;
     font-family: "Lato";
@@ -317,19 +365,30 @@ opacity: 1;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    opacity: 1;
+    width: 359.449px;
+    height: 99px;
+    flex-shrink: 0;
 }
 
 .text_italic {
     font-style: italic;
 }
 
-.footer_center_right{
-    width: 30%;
+.footer_center_right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer_center_right_top {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .footer_center_right_h2 {
-    width: auto;
     color: #222224;
     text-align: center;
     font-family: "Lato";
@@ -337,48 +396,51 @@ opacity: 1;
     font-style: normal;
     font-weight: 700;
     line-height: 167.2%;
-    margin-bottom: 32px;
+    /* 40.128px */
 }
 
 .footer_center_fone_size {
+    color: #222224;
+    font-family: "Lato";
     font-size: 18px;
+    font-style: normal;
     font-weight: 400;
+    line-height: 167.2%;
+    margin-bottom: 32px;
 }
 
-.subscribe_intput {
+.subscribe_input {
     display: flex;
-    height: 49px;
 }
 
 .subscribe_entry_field {
-    background: #E1E1E1;
+    width: 256px;
+    height: 49px;
     flex-shrink: 0;
-    width: 170px;
-    color: #222224;
-    font-family: "Lato";
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    padding: 7px 64px 6px 22px;
-    border-top-left-radius: 50px;
-    border-bottom-left-radius: 50px;
+    border-radius: 30px 0px 0px 30px;
+    padding-left: 22px;
+    padding-right: 30px;
+    fill: #E1E1E1;
+    border: none;
+}
+
+.subscribe_entry_field:hover {
+    background-color: #ecd2d6;
 }
 
 .subscribe_btn {
-    background: #F16D7F;
-    width: 85px;
-    flex-shrink: 0;
+    width: 100px;
+    height: 49px;
+    background-color: #F16D7F;
+    border-radius: 0px 30px 30px 0px;
     color: #FFF;
     text-align: center;
-    font-family: "Lato";
+    font-family: Lato;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    padding: 8px;
-    border-top-right-radius: 50px;
-    border-bottom-right-radius: 50px;
+    border: 1px solid #F16D7F
 }
 
 /* ---footer---social--- */
@@ -387,7 +449,7 @@ opacity: 1;
     width: 100%;
     display: flex;
     gap: 655px;
-    padding: 24px 233px;
+    padding: 24px 0px;
     align-items: center;
     justify-content: center;
 }
@@ -406,22 +468,15 @@ opacity: 1;
     gap: 7.30px;
 }
 
-.social_icon {
-    display: flex;
-    position: relative;
-    justify-content: center;
-    align-items: center;
+.footer_social_buttons {
+    width: 31.45px;
+    height: 32px;
+    border: none;
 }
 
-.social_form {
-    display: flex;
-    position: relative;
+.footer_social_buttons:hover {
+    background-color: #F16D7F;
 }
-
-.social_char {
-    position: absolute;
-}
-
 
 .footer_section {
     display: flex;
@@ -429,7 +484,7 @@ opacity: 1;
     align-items: center;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1024px) and (min-width: 768px) {
 
     .main_header {
         width: 100%;
@@ -521,6 +576,44 @@ opacity: 1;
         margin: 32.48px auto 70.52px auto;
         padding: 14px 39px;
     }
+
+
+    .footer_info {
+        height: 610px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0px;
+    }
+
+    .footer_info_item {
+        margin-top: 28px;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .footer_center {
+        height: 693px;
+        background-size: cover;
+    }
+
+    .footer_center_background {
+        padding-top: 64px;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 48px;
+        flex-direction: column;
+    }
+
+    .footer_social_part {
+        gap: 305px;
+    }
+
+
 }
 
 @media (min-width:320px) and (max-width: 767px) {
@@ -581,11 +674,58 @@ opacity: 1;
     }
 
     .featured_button {
-        margin: 40.6px auto 85px auto;
+        margin: 40.6px auto 0px auto;
         padding: 14px 39px;
     }
 
     .featured_card_content {
         padding: 25.28px 28.72px 19.95px 16.41px;
     }
+/* ----------------------------- */
+    .footer_info {
+        height: 610px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer_info_item {
+        margin-top: 10px;
+    }
+
+    .footer_center {
+        height: 550px;
+        background-size: cover;
+    }
+
+    .footer_center_background {
+        padding-top: 64px;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content:flex-start;
+        gap: 48px;
+        flex-direction: column;
+    }
+
+    .footer_social_part {
+        height: 143px;
+        display: flex;
+        gap: 40px;
+        justify-content: flex-end;
+        align-items: center;
+        flex-direction: column-reverse;
+        padding-bottom: 0px;
+        padding-top: 0px;;
+    }
+
+    .footer_social_right {
+        padding-top: 43px;
+    }
+
+    .subscribe_entry_field {
+        width: 150px;
+    }
+
 }
